<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ibUpUserPhoto"
            android:layout_width="@dimen/one_twenty"
            android:layout_height="@dimen/one_twenty"
            android:src="@drawable/profile"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginTop="@dimen/twenty_five"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tiUser"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiUser"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:hint="@string/user"
            app:hintTextColor="@color/purple_hand"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/purple_hand"
            app:layout_constraintTop_toBottomOf="@+id/ibUpUserPhoto"
            app:layout_constraintBottom_toTopOf="@+id/tiPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiPassword"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:hint="@string/password"
            app:hintTextColor="@color/purple_hand"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/purple_hand"
            app:layout_constraintTop_toBottomOf="@+id/tiUser"
            app:layout_constraintBottom_toTopOf="@+id/tiName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiName"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:hint="@string/name"
            app:hintTextColor="@color/purple_hand"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/purple_hand"
            app:layout_constraintTop_toBottomOf="@+id/tiPassword"
            app:layout_constraintBottom_toTopOf="@+id/tiSurname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiSurname"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:hint="@string/surname"
            app:hintTextColor="@color/purple_hand"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/purple_hand"
            app:layout_constraintTop_toBottomOf="@+id/tiName"
            app:layout_constraintBottom_toTopOf="@+id/tiMail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiMail"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:hint="@string/email"
            app:hintTextColor="@color/purple_hand"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/purple_hand"
            app:layout_constraintTop_toBottomOf="@+id/tiSurname"
            app:layout_constraintBottom_toTopOf="@+id/tiPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiPhone"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:hint="@string/phone"
            app:hintTextColor="@color/purple_hand"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/purple_hand"
            app:layout_constraintTop_toBottomOf="@+id/tiMail"
            app:layout_constraintBottom_toTopOf="@+id/tiTown"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiTown"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginEnd="@dimen/ten"
            android:hint="@string/town"
            app:hintTextColor="@color/purple_hand"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/purple_hand"
            app:layout_constraintTop_toBottomOf="@+id/tiPhone"
            app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_margin="@dimen/twenty"
            android:backgroundTint="@color/purple_hand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiTown"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/ivSuccess"
            android:layout_width="@dimen/two_hundred"
            android:layout_height="@dimen/two_hundred"
            app:srcCompat="@raw/success"
            app:lottie_loop="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>